# maple2d

./: Cargo.toml  build.rs
examples/: foo.rs
src/: app.rs  lib.rs  state.rs
src/canvas/: mod.rs
src/canvas/commands/: ellipse.rs  mod.rs  rect.rs  text.rs  texture.rs  triangle.rs
src/context/: mod.rs  texture.rs
src/render/: mod.rs  texture.rs
src/render/shaders/: common.wgsl  draw.wgsl  mod.rs  stencil.wgsl
src/render/text/: atlas.rs  glyph.rs  mod.rs
