[package]
name = "maple2d"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "26.0.1"
winit = "0.30.12"
image = "0.25.6"
bytemuck = { version = "1.23.1", features = ["derive"] }
parking_lot = "0.12.4"
pollster = "0.4.0"
palette = "0.7.6"
slotmap = "1.0.7"
glam = "0.30.5"
itertools = "0.14.0"
cosmic-text = "0.14.2"
lru = "0.16.0"
etagere = "0.2.15"
ahash = "0.8.12"
spin_sleep = "1.3.2"

[build-dependencies]
wgsl-grease = { git = "https://github.com/OnyxUI/wgsl-grease.git" }
